# AgentCoreWithWebApp-workshop

./: .gitignore  README.md  pyproject.toml
agent/: invoke.py  requirements.txt
agent/cost_estimator_agent/: config.py  cost_estimator_agent.py
gateway/: README.md  deploy.sh  setup_outbound_gateway.py
identity/: setup_identity.py
solutions/: README.md
solutions/agent/: invoke.py
solutions/web/: app.py
web/: app.py
web/static/: index.html
